maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:9: error: value foreach is not a member of (Int, Int)
    for (i <- Coord(sol)){
                   ^ShortestPathMaze:28: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^ShortestPathMaze:10: error: type mismatch;
 found   : String
 required: (Int, Int)
      Coord(sol+1)=Coord(sol+1)+marquage(i(0),i(1),sol)
                               ^ShortestPathMaze:28: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^